--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,7 @@
-/* LESS needs to be processed */
+@variables .less;
+@mixins .less;
+@reset .less;
+@global .less;
+@navigation .less;
+@footer .less;
+@home-page .less;
