--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,8 @@
 // Follow the order in the readme
+@variables.less;
+@mixins.less;
+@reset.less;
+@global.less;
+@navigation.less;
+@footer.less;
+@home-page.less;
