--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,7 @@
+@accentcolor: red;
+
+
+
 .home {
 
   .content-section {
@@ -46,16 +50,35 @@
       border-radius: 10px;
     }
   }
-
+  
   .content-pick {
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
-
+    
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      button{
+        .button1(@eastern-blue, @shark){
+        //background-color: turquoise;
+       //border-color: lightgray;
+       //color: @accentcolor;
+       padding: 20px;
+       text-align: center;
+       text-decoration: none;
+       font-size: 16px;
+       margin: 4px 2px;
+       border-radius: 12px;
+       //display: flex;
+       //justify-content: flex-start;
+       
+        }
+      }
     }
+
   }
 }// home
+
+// my code
