--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation Styles here
+
+header a{
+	width: 3%;
+	margin: 5% 4%;
+	color: black;
+    text-decoration: none;
+    font-size:1.6rem;
+
+}
+
+.navdiv {
+    border-bottom: 3px dashed lightgray;
+}
+
+.funbus {
+    //to center image
+    display: block;
+    margin: 30px auto;
+}
+
