--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
-@accentcolor: red;
 
-
+ .mycontainer{
+margin: 30px;
+} 
 
 .home {
 
@@ -61,24 +62,19 @@
       width: 30%;
       margin-bottom: 30px;
       button{
-        .button1(@eastern-blue, @shark){
-        //background-color: turquoise;
-       //border-color: lightgray;
-       //color: @accentcolor;
+        .button1(@eastern-blue, @shark);
        padding: 20px;
        text-align: center;
        text-decoration: none;
        font-size: 16px;
        margin: 4px 2px;
        border-radius: 12px;
-       //display: flex;
-       //justify-content: flex-start;
        
-        }
-      }
-    }
+         //.button1
+      } //button
+    }//.destination
 
-  }
+  }//.content-pick
 }// home
 
 // my code
