--- a/less/variables.less
+++ b/less/variables.less
@@ -13,5 +13,5 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 
-//remove
-@color: hotpink;
+//For @media in lessfile
+@phone: (max-width:500px);
