--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,6 @@
 // Navigation Styles here
 
+
 header a{
 	width: 3%;
 	margin: 5% 4%;
@@ -11,6 +12,14 @@ header a{
 
 .navdiv {
     border-bottom: 3px dashed lightgray;
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+
+    @media @phone {
+        flex-direction: column;
+
+    }
 }
 
 .funbus {
@@ -19,3 +28,7 @@ header a{
     margin: 30px auto;
 }
 
+.putrow{
+    display: flex;
+    justify-content: space-between;
+}
